refactor: 💡 Routing refactor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --header-height: 4rem;
+}
+
+body {
+  color: var(--tui-text-01);
+  background: var(--tui-base-01);
+}
+
+.container--margin {
+  margin-top: var(--header-height);
+}
+.container--padding {
+  padding: var(--tui-padding-l);
+}
