refactor: 💡 Getting initial data, searching

--- a/src/app/modules/posts-list/components/posts-table-searchbar/posts-table-searchbar.component.html
+++ b/src/app/modules/posts-list/components/posts-table-searchbar/posts-table-searchbar.component.html
@@ -1,1 +1,11 @@
-<p>posts-table-searchbar works!</p>
+<form [formGroup]="form">
+  <div class="tui-form__row">
+    <tui-input
+      formControlName="quickSearch"
+      icon="tuiIconSearch"
+      [tuiTextfieldCleaner]="true">
+      Search by title or content
+      <input tuiTextfield />
+    </tui-input>
+  </div>
+</form>
