refactor: 💡 Displaying data as table

--- a/src/app/modules/posts-list/components/posts-table-searchbar/posts-table-searchbar.component.html
+++ b/src/app/modules/posts-list/components/posts-table-searchbar/posts-table-searchbar.component.html
@@ -1,11 +1,10 @@
 <form [formGroup]="form">
-  <div class="tui-form__row">
+  <div class="tui-form__row" tuiTextfieldSize="m">
     <tui-input
       formControlName="quickSearch"
       icon="tuiIconSearch"
       [tuiTextfieldCleaner]="true">
-      Search by title or content
-      <input tuiTextfield />
+      Search by city or info
     </tui-input>
   </div>
 </form>
