--- a/src/app/modules/posts-list/components/posts-table-wrapper/posts-table-wrapper.component.html
+++ b/src/app/modules/posts-list/components/posts-table-wrapper/posts-table-wrapper.component.html
@@ -1,13 +1,17 @@
 <div
   class="tui-container tui-container_adaptive container--margin container--padding">
   <div class="tui-row tui-row_adaptive tui-space_bottom-4">
-    <div class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12">
-      <app-posts-table-searchbar></app-posts-table-searchbar>
-    </div>
-    <div class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12">
+    <div class="tui-col_xs-4 tui-col_lg-4 tui-col_md-5 tui-col_xs-12">MAPA</div>
+
+    <div class="tui-col_xs-8 tui-col_lg-8 tui-col_md-8">
+      <div class="tui-row">
+        <div class="tui-col_xs-6 tui-col_lg-6 tui-col_md-6">
+          <app-posts-table-searchbar></app-posts-table-searchbar>
+        </div>
+      </div>
       <div class="tui-row">
         <div class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12">
-          <app-posts-table></app-posts-table>
+          <app-posts-table [data]="posts"></app-posts-table>
         </div>
       </div>
     </div>
