--- a/src/app/modules/posts-list/components/posts-table-wrapper/posts-table-wrapper.component.html
+++ b/src/app/modules/posts-list/components/posts-table-wrapper/posts-table-wrapper.component.html
@@ -6,10 +6,17 @@
         <div class="tui-col_xs-6 tui-col_lg-6 tui-col_md-6">
           <app-posts-table-searchbar></app-posts-table-searchbar>
         </div>
+        <div class="tui-col_xs-6 tui-col_lg-6 tui-col_md-6">
+          <tui-tabs [(activeItemIndex)]="activeItemIndex">
+            <button tuiTab (click)="showMap(true)">Map</button>
+            <button tuiTab (click)="showMap(false)">Table</button>
+          </tui-tabs>
+        </div>
       </div>
       <div class="tui-row">
         <div class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12">
-          <app-posts-map [data]="posts"></app-posts-map>
+          <app-posts-map *ngIf="mapVisible" [data]="posts"></app-posts-map>
+          <app-posts-table *ngIf="!mapVisible" [data]="posts"></app-posts-table>
         </div>
       </div>
     </div>
