--- a/src/app/modules/posts-list/components/posts-table/posts-table.component.html
+++ b/src/app/modules/posts-list/components/posts-table/posts-table.component.html
@@ -24,7 +24,7 @@
             shape="rounded"
             size="s"
             appearance="icon"
-            (click)="edit(item)"></button>
+            (click)="edit(item); $event.stopImmediatePropagation()"></button>
           <button
             tuiIconButton
             type="button"
@@ -33,7 +33,7 @@
             shape="rounded"
             size="s"
             appearance="icon"
-            (click)="remove(item)"></button>
+            (click)="remove(item); $event.stopImmediatePropagation()"></button>
         </div>
       </td>
     </tr>
