refactor: 💡 Added Add Pos option to table

--- a/src/app/modules/posts-list/components/posts-map/posts-map.component.html
+++ b/src/app/modules/posts-list/components/posts-map/posts-map.component.html
@@ -3,7 +3,7 @@
   width="100%"
   [zoom]="zoom"
   [options]="options"
-  (mapDblclick)="onClick($event)">
+  (mapDblclick)="addMarker($event)">
   <map-marker
     #marker="mapMarker"
     *ngFor="let item of data"
