--- a/src/app/modules/posts-list/components/posts-table/posts-table.component.html
+++ b/src/app/modules/posts-list/components/posts-table/posts-table.component.html
@@ -1,3 +1,11 @@
+<div class="tui-row tui-space_bottom-4">
+  <div
+    class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12 tui-col_xs-12"
+    style="text-align: right">
+    <button tuiButton type="button" size="m" (click)="add()">Add new</button>
+  </div>
+</div>
+
 <table tuiTable class="table" [columns]="columns">
   <thead>
     <tr tuiThGroup>
