--- a/src/app/modules/posts-list/components/posts-map/posts-map.component.html
+++ b/src/app/modules/posts-list/components/posts-map/posts-map.component.html
@@ -1,3 +1,11 @@
+<div class="tui-row tui-space_bottom-4">
+  <div class="tui-col_xs-12 tui-col_lg-12 tui-col_md-12 tui-col_xs-12">
+    <tui-notification>
+      You can add your own markers by double clicking on map
+    </tui-notification>
+  </div>
+</div>
+
 <google-map
   height="600px"
   width="100%"
