fix: 🐛 map rendering
fixed map rendering

--- a/src/app/modules/posts-list/components/posts-map/posts-map.component.html
+++ b/src/app/modules/posts-list/components/posts-map/posts-map.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<!-- <google-map
+<google-map
   height="600px"
   width="100%"
   [zoom]="zoom"
@@ -23,4 +23,4 @@
   <map-info-window [options]="infoWindowOptions">
     <app-posts-info-window [data]="infoWindowItem"></app-posts-info-window>
   </map-info-window>
-</google-map> -->
+</google-map>
